gs/jasper/src/libjasper/base/jas_malloc.c
@@ -166,7 +166,8 @@ static void releaseAllMem( void )
 void *jas_malloc(size_t size)
 {
 	void	*p;
-
+        if(size == 0)
+          size = 1;
 	p = malloc(size);
 	addMem(p);
 	return p;
@@ -183,6 +184,8 @@ void *jas_realloc(void *ptr, size_t size)
 	void	*p;
 
 	removeMem(ptr);
+        if(size == 0)
+          size = 1;
 	p = realloc(ptr, size);
 	addMem(p);
 	return p;
